Remove unused payments page
